--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,3 +3,17 @@
     min-height: 74px;
     border-bottom: 1px solid #545454;
 }
+
+@media screen and (max-width: 880px) {
+    .header {
+        min-width: 100%;
+    }
+    
+}
+
+@media screen and (max-width: 550px) {
+    .header {
+        min-height: 56px;
+    }
+    
+}
