--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -16,3 +16,10 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media screen and (max-width: 550px) {
+    .page {
+        padding: 28px 0 36px;
+    }
+    
+}
