--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,15 +1,10 @@
 .header {
-    min-width: 880px;
+    margin: auto;
+    max-width: 880px;
     min-height: 74px;
     border-bottom: 1px solid #545454;
 }
 
-@media screen and (max-width: 880px) {
-    .header {
-        min-width: 100%;
-    }
-    
-}
 
 @media screen and (max-width: 550px) {
     .header {
