--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,20 +1,19 @@
-.profile-intro__edit-button {
+.profile__add-button {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    width: 24px;
-    height: 24px;
+    width: 150px;
+    height: 50px;
     border: 2px solid #fff;
-    background-image: url(../../../images/edit-button.png);
+    background-image: url(../../../images/add-button.png);
     background-position: center;
     background-repeat: no-repeat;
     background-color: transparent;
-    align-self: center;   
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 550px) {
-    .profile-intro__edit-button {
-        width: 18px;
-        height: 18px;
+    .profile__add-button {
+        width: 282px;
     }
 }
