--- a/blocks/profile/__block/profile__block.css
+++ b/blocks/profile/__block/profile__block.css
@@ -1,12 +1,11 @@
-.profile {
+.profile__block {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
 }
 
 @media screen and (max-width: 550px) {
-    .profile {
+    .profile__block {
         flex-direction: column;
-    }  
+        align-items: center;
+    }
 }
