--- a/pages/index.css
+++ b/pages/index.css
@@ -4,3 +4,14 @@
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+
+@import url(../blocks/content/content.css);
+
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__block/profile__block.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile-intro/profile-intro.css);
+@import url(../blocks/profile-intro/__title/profile-intro__title.css);
+@import url(../blocks/profile-intro/__sabtitle/profile-intro__sabtitle.css);
+@import url(../blocks/profile-intro/__edit-button/profile-intro__edit-button.css);
