--- a/blocks/profile-intro/__sabtitle/profile-intro__sabtitle.css
+++ b/blocks/profile-intro/__sabtitle/profile-intro__sabtitle.css
@@ -3,6 +3,9 @@
     font-size: 18px;
     line-height: 22px;
     font-weight: 400;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 880px) {
