--- a/blocks/profile-intro/__title/profile-intro__title.css
+++ b/blocks/profile-intro/__title/profile-intro__title.css
@@ -4,6 +4,9 @@
     line-height: 48px;
     font-weight: 500;
     max-width: 294px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 880px) {
