--- a/pages/index.css
+++ b/pages/index.css
@@ -15,3 +15,11 @@
 @import url(../blocks/profile-intro/__title/profile-intro__title.css);
 @import url(../blocks/profile-intro/__sabtitle/profile-intro__sabtitle.css);
 @import url(../blocks/profile-intro/__edit-button/profile-intro__edit-button.css);
+
+@import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__list/cards__list.css);
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__image/card__image.css);
+@import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__heart/card__heart.css);
+@import url(../blocks/card/__group/card__group.css);
