--- a/pages/index.css
+++ b/pages/index.css
@@ -23,3 +23,6 @@
 @import url(../blocks/card/__title/card__title.css);
 @import url(../blocks/card/__heart/card__heart.css);
 @import url(../blocks/card/__group/card__group.css);
+
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
