--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -11,3 +11,11 @@
     background-color: transparent;
     border: none;
 }
+
+@media screen and (max-width: 550px) {
+    .popup__close {
+        right: 0;
+        width: 20px;
+        height: 20px;
+    }  
+}
