--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,3 +7,11 @@
     box-sizing: border-box;
     position: relative;
 }
+
+@media screen and (max-width: 550px) {
+    .popup__container {
+        width: 282px;
+        height: 322px;
+        padding: 25px 22px;
+    }   
+}
