--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -7,4 +7,15 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 21.78px;
+    border: none;
+    border-radius: 5px;
+}
+
+@media screen and (max-width: 550px) {
+    .popup__save-button {
+        width: 238px;
+        height: 46px;
+        font-size: 16px;
+        line-height: 16.94px;
+    }  
 }
