--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -6,3 +6,11 @@
     color: #000;
     padding-bottom: 20px;
 }
+
+@media screen and (max-width: 550px) {
+    .popup__title {
+        font-size: 18px;
+        line-height: 21.7px;
+        padding-bottom: 55px;
+    }  
+}
