--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,8 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__field/poup__field.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+
+@import url(../blocks/popup/__field/_with/field_with_job.css);
+@import url(../blocks/popup/__field/_with/field_with_name.css);
+
+@import url(../blocks/popup/popup_opened.css);
