--- a/blocks/card/__heart/card__heart.css
+++ b/blocks/card/__heart/card__heart.css
@@ -7,3 +7,8 @@
     background-color: transparent;
     border: none;
 }
+
+.card__heart:active {
+    background-image: url(../../../images/heart-black.svg);
+    opacity: 1;
+}
