--- a/blocks/popup/__field/poup__field.css
+++ b/blocks/popup/__field/poup__field.css
@@ -1,7 +1,6 @@
 .popup__field {
-    height: 27px;
-    padding-bottom: 8px;
-    padding-top: 17px;
+    margin-top: 30px;
+    min-height: 24px;
     font-size: 14px;
     line-height: 16.94px;
     font-weight: 400;
@@ -9,3 +8,9 @@
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
+
+.popup__field:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px lightskyblue;
+    border-bottom: none;
+  }
