--- a/blocks/card/__heart/card__heart.css
+++ b/blocks/card/__heart/card__heart.css
@@ -8,6 +8,11 @@
     border: none;
 }
 
+.card__heart:hover {
+    opacity: .5;
+    cursor: pointer;
+}
+
 .card__heart:active {
     background-image: url(../../../images/heart-black.svg);
     opacity: 1;
