--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,7 +1,7 @@
 .card {
     width: 282px;
     height: 361px;
-    border-radius: 5%;
+    border-radius: 10px;
     background-color: #fff;
     overflow: hidden;
     margin: 0;
