--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -5,7 +5,7 @@
     z-index: 1;
     width: 32px;
     height: 32px;
-    background-image: url(../../../images/Close-Icon.png);
+    background-image: url(../../../images/Close-Icon.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-color: transparent;
