--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,11 +1,11 @@
 .popup__container {
     width: 430px;
-    height: 330px;
     background-color: #fff;
-    border-radius: 5%;
+    border-radius: 10px;
     padding: 34px 36px 37px;
     box-sizing: border-box;
     position: relative;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 }
 
 @media screen and (max-width: 550px) {
