--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -8,14 +8,19 @@
     font-weight: 400;
     line-height: 21.78px;
     border: none;
-    border-radius: 5px;
+    border-radius: 2px;
+}
+
+.popup__save-button:hover {
+    opacity: .8;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 550px) {
     .popup__save-button {
         width: 238px;
         height: 46px;
-        font-size: 16px;
+        font-size: 14px;
         line-height: 16.94px;
     }  
 }
