--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,5 +7,6 @@
     right: 0;
     display: flex;
     align-items: center;
-    justify-content: center; 
+    justify-content: center;
+    display: none; 
 }
