--- a/blocks/profile-intro/__edit-button/profile-intro__edit-button.css
+++ b/blocks/profile-intro/__edit-button/profile-intro__edit-button.css
@@ -5,7 +5,7 @@
     width: 24px;
     height: 24px;
     border: 2px solid #fff;
-    background-image: url(../../../images/edit-button.png);
+    background-image: url(../../../images/edit-button.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-color: transparent;
