--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,7 +5,7 @@
     width: 150px;
     height: 50px;
     border: 2px solid #fff;
-    background-image: url(../../../images/add-button.png);
+    background-image: url(../../../images/add-button.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-color: transparent;
