--- a/blocks/card/__heart/card__heart.css
+++ b/blocks/card/__heart/card__heart.css
@@ -6,6 +6,7 @@
     background-repeat: no-repeat;
     background-color: transparent;
     border: none;
+    box-sizing: content-box;
 }
 
 .card__heart:hover {
