--- a/blocks/cards/__list/cards__list.css
+++ b/blocks/cards/__list/cards__list.css
@@ -3,23 +3,23 @@
     margin: 0;
     padding: 0;
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(3, 1fr);
+    /*grid-template-rows: repeat(auto-fit, 1fr);*/
+    grid-template-columns: repeat(auto-fit, 282px);
     row-gap: 20px;
     column-gap: 17px;
-    justify-items: center;
+    justify-content: center;
 }
 
-@media screen and (max-width: 960px) {
+/*@media screen and (max-width: 960px) {
     .cards__list {
-        grid-template-rows: repeat(3, 1fr);
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(auto-fill, 1fr);
+        grid-template-columns: repeat(aauto-fill, 1fr);
     }  
 }
 
 @media screen and (max-width: 660px) {
     .cards__list {
-        grid-template-rows: repeat(6, 1fr);
+        grid-template-rows: repeat(auto-fill, 1fr);
         grid-template-columns: 1fr;
     }  
 }
