--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,5 +5,8 @@
     bottom: 0;
     left: 0;
     right: 0;
-    display: none; 
+    /*display: none;*/
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.3s ease-in-out;
 }
