--- a/pages/index.css
+++ b/pages/index.css
@@ -24,6 +24,7 @@
 @import url(../blocks/card/__image/card__image.css);
 @import url(../blocks/card/__title/card__title.css);
 @import url(../blocks/card/__heart/card__heart.css);
+@import url(../blocks/card/__heart/_active/card__heart_active.css);
 @import url(../blocks/card/__basket/card__basket.css);
 @import url(../blocks/card/__group/card__group.css);
 
@@ -31,6 +32,8 @@
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_type/popup_type_edit-profile.css);
+@import url(../blocks/popup/_type/popup_type_add-cards.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__title/popup__title.css);
@@ -39,5 +42,15 @@
 
 @import url(../blocks/popup/__field/_with/popup__field_with_job.css);
 @import url(../blocks/popup/__field/_with/popup__field_with_name.css);
+@import url(../blocks/popup/__field/_with/popup__field_with_card-name.css);
+@import url(../blocks/popup/__field/_with/popup__field_with_card-link.css);
 
 @import url(../blocks/popup/_opened/popup_opened.css);
+
+@import url(../blocks/popup/__form-add-card/popup__form-add-card.css);
+
+@import url(../blocks/popup/_type/popup_type_show-cards.css);
+@import url(../blocks/popup/__show-card/popup__show-card.css);
+@import url(../blocks/popup/__caption/popup__caption.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__container/_type/popup__container_type_show-cards.css);
