--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -11,7 +11,7 @@
 @media screen and (max-width: 550px) {
     .popup__container {
         width: 282px;
-        height: 322px;
+        height: auto;
         padding: 25px 22px;
     }   
 }
