--- a/pages/index.css
+++ b/pages/index.css
@@ -39,11 +39,17 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__field/poup__field.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__save-button/_inactive/popup__save-button_inactive.css);
+
+@import url(../blocks/popup/__field-error/popup__field-error.css);
+@import url(../blocks/popup/__field-error/_active/popup__field-error_active.css);
 
 @import url(../blocks/popup/__field/_with/popup__field_with_job.css);
 @import url(../blocks/popup/__field/_with/popup__field_with_name.css);
 @import url(../blocks/popup/__field/_with/popup__field_with_card-name.css);
 @import url(../blocks/popup/__field/_with/popup__field_with_card-link.css);
+
+@import url(../blocks/popup/__field/_type/popup__field_type_error.css);
 
 @import url(../blocks/popup/_opened/popup_opened.css);
 
