--- a/blocks/popup/__field-error/popup__field-error.css
+++ b/blocks/popup/__field-error/popup__field-error.css
@@ -3,5 +3,7 @@
     line-height: 14.52px;
     font-weight: 400;
     color: #FF0000;
-    display: none;
+    display: block;
+    min-height: 30px;
+    margin-bottom: 10px;
 }
