--- a/main.css
+++ b/main.css
@@ -6,8 +6,8 @@
 .header__logo{max-width:142px}@media screen and (max-width:880px){.header__logo{padding-left:27px}}@media screen and (max-width:550px){.header__logo{max-width:103.74px}}
 .content{margin:auto;max-width:880px;padding-top:40px}@media screen and (max-width:880px){.content{padding:42px 19px 0}}
 .profile{align-items:center;display:flex;flex-direction:row;justify-content:space-between}@media screen and (max-width:620px){.profile{flex-direction:column}}
-.profile__block{display:flex;flex-direction:row}@media screen and (max-width:550px){.profile__block{align-items:center;flex-direction:column}}
-.profile__avatar{border-radius:50%;width:120px}
+.profile__block{display:flex;flex-direction:row;position:relative}@media screen and (max-width:550px){.profile__block{align-items:center;flex-direction:column}}
+.profile__avatar{border-radius:50%;height:120px;-o-object-fit:cover;object-fit:cover;width:120px}
 .profile__add-button{-webkit-appearance:none;-moz-appearance:none;appearance:none;background-color:transparent;background-image:url(bed8c136e13907f5eefb.svg);background-position:50%;background-repeat:no-repeat;border:2px solid #fff;box-sizing:border-box;height:50px;width:150px}@media screen and (max-width:550px){.profile__add-button{width:282px}}
 .profile-intro{grid-column-gap:18px;grid-row-gap:5px;align-content:center;display:grid;grid-template-columns:repeat(2,-webkit-max-content);grid-template-columns:repeat(2,max-content);grid-template-rows:auto;padding-left:30px}@media screen and (max-width:550px){.profile-intro{grid-column-gap:10px;padding:26px 0 36px}}
 .profile-intro__title{font-size:42px;font-weight:500;line-height:48px;margin:0;max-width:294px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:880px){.profile-intro__title{font-size:27px;line-height:33px;margin:auto;max-width:189px}}
@@ -46,4 +46,7 @@
 .popup__caption{font-size:12px;font-weight:400;line-height:15px;margin:10px 0 0}
 .popup__image{background-position:50%;background-repeat:no-repeat;background-size:contain;max-height:75vh;max-width:75vw}
 .popup__container_type_show-cards{background-color:transparent;margin:0;padding:0;position:relative;width:auto}
+.card__counter-likes{color:#000;font-size:13px;font-weight:400;line-height:16px;text-align:center}
+.profile__avatar-edit-button{background:none;border:0;cursor:pointer;height:100%;left:0;padding:0;position:absolute;top:0;transition:background-color .2s ease;width:100%}.profile__avatar-edit-button:focus,.profile__avatar-edit-button:hover{background-color:rgba(0,0,0,.8);background-image:url(ae1a976ddb506239e9f0.svg);background-position:50%;background-repeat:no-repeat}
+.popup_type_edit-avatar{background-color:rgba(0,0,0,.5)}
 
